@@ -1,4 +1,4 @@
-.TH HDPARM 8 "September 2012" "Version 9.42"
+.TH HDPARM 8 "November 2012" "Version 9.43"
 
 .SH NAME
 hdparm \- get/set SATA/IDE device parameters
